--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET = sfewfewsfgwe4gesgesg
-URL = http://localhost:8000
+URL = https://askmereact.appspot.com
 FACEBOOK_CLIENT_ID =fesf
 FACEBOOK_CLIENT_SECRET =fsfe
 GOOGLE_CLIENT_ID =830237647770-iqh4hk483u64t5do76jd0544g2vs3aia.apps.googleusercontent.com
